--- a/Back/ProEventos.API/appsettings.Development.json
+++ b/Back/ProEventos.API/appsettings.Development.json
@@ -3,9 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionStrings": {
-      "ctx": "Data Source=INSPIRON5458;Initial Catalog=ProvaBonifq;Persist Security Info=True;User ID=sa;Password=88092229;TrustServerCertificate=True"
     }
+  },
+  "ConnectionStrings": {
+    "ctx": "Data Source=INSPIRON5458;Initial Catalog=ProEventos;Persist Security Info=True;User ID=sa;Password=88092229;TrustServerCertificate=True"
   }
 }
