Autorization;DDD;Camadas

--- a/Back/ProEventos.API/appsettings.Development.json
+++ b/Back/ProEventos.API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "ctx": "Data Source=INSPIRON5458;Initial Catalog=ProEventos;Persist Security Info=True;User ID=sa;Password=88092229;TrustServerCertificate=True"
-  }
+  },
+  "TokenKey" :  "QUHIUohoh2398478#$%*@SFGHKEMasq123vmsAAWRFF"
 }
